--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-streamlit
-scikit-learn
-pandas
-numpy
-matplotlib
-seaborn
-imbalanced-learn
+streamlit==1.38.0
+scikit-learn==1.6.1
+pandas==2.2.2
+numpy==1.26.4
+matplotlib==3.9.2
