--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.38.0
+streamlit
 scikit-learn==1.6.1
-pandas==2.2.2
-numpy==1.26.4
-matplotlib==3.9.2
+pandas
+numpy
+matplotlib
+seaborn
